[gd_scene load_steps=6 format=1]

[ext_resource path="res://scripts/laser.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/enemies/laser_head.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/enemies/laser_beam.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 0.5, 1.5 )

[sub_resource type="GDScript" id=2]

script/source = "extends Area2D

var destroyed = false
"

[node name="Laser" type="Node2D"]

script/script = ExtResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityNotifier2D" parent="."]

transform/pos = Vector2( 55.3518, 0 )
transform/scale = Vector2( 6.53518, 1 )
rect = Rect2( -10, -10, 20, 20 )

[node name="RightHead" type="Sprite" parent="."]

transform/pos = Vector2( 80, 0 )
texture = ExtResource( 2 )
flip_h = true

[node name="LeftHead" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="Beam" type="Area2D" parent="LeftHead" groups=[
"Enemy",
]]

visibility/visible = false
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 3.5, -0.5 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftHead/Beam"]

transform/pos = Vector2( 3.5, -0.5 )
shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="LeftHead/Beam"]

transform/pos = Vector2( 3, -2 )
texture = ExtResource( 3 )
centered = false

[node name="TimerWhileOff" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="TimerWhileOn" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="TimerWhileCharging" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="exit_screen" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_exit_screen"]

[connection signal="timeout" from="TimerWhileOff" to="." method="_on_TimerWhileOff_timeout"]

[connection signal="timeout" from="TimerWhileOn" to="." method="_on_TimerWhileOn_timeout"]

[connection signal="timeout" from="TimerWhileCharging" to="." method="_on_TimerWhileCharging_timeout"]


